<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"

    >

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:padding="12dp"
        android:background="#fff"
        >
        <TableRow>
            <Button
                android:text="@string/connect"
                android:id="@+id/connect"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />
            <Button
                android:text="@string/disconnect"
                android:id="@+id/disconnect"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/takeoff"
                android:id="@+id/takeoff"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />
            <Button
                android:text="@string/landing"
                android:id="@+id/landing"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/rotate_left"
                android:id="@+id/rol"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/rotate_left"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />
            <Button
                android:text="@string/rotate_right"
                android:id="@+id/ror"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_margin="8dp"
                android:drawableRight="@drawable/rotate_right"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/up"
                android:id="@+id/up"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:drawableTop="@drawable/up"
                android:layout_margin="8dp"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />
            <Button
                android:text="@string/down"
                android:id="@+id/down"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:drawableTop="@drawable/down"
                android:layout_margin="8dp"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />
        </TableRow>



        <TableRow>
            <Button
                android:text="@string/foward"
                android:id="@+id/forward"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/left"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />
            <Button
                android:text="@string/backward"
                android:id="@+id/backward"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_margin="8dp"
                android:drawableRight="@drawable/right"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />
        </TableRow>


        <TableRow>
            <Button
                android:text="@string/hover"
                android:id="@+id/hover"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />

            <Button
                android:text="@string/measure_ments"
                android:id="@+id/measurements"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/buttonfield"
                android:onClick="onClick"
                />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/statusBox"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textColor="#000"
        />

</LinearLayout>